# training-operator

./: .flake8  .gcloudignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .pypirc  .test.prow  .travis.yml  ADOPTERS.md  CHANGELOG.md  CONTRIBUTING.md  Gopkg.toml  Makefile  OWNERS  PROJECT  README.md  ROADMAP.md  VERSION  changelog.py  config.sh  developer_guide.md  e2e_testing.md  generate-openapi-swagger.md  glide.yaml  go.mod  go.sum  lint.sh  linter_config.json  main.go  prow_config.yaml  q  rename.sh  requirements.txt  submit_release_job.sh  tf_job_design_doc.md  vendor.go
sdk/: README.md  pyproject.toml  setup.py
sdk/docs/: IoK8sApiCoreV1AWSElasticBlockStoreVolumeSource.md  IoK8sApiCoreV1Affinity.md  IoK8sApiCoreV1AttachedVolume.md  IoK8sApiCoreV1AvoidPods.md  IoK8sApiCoreV1AzureDiskVolumeSource.md  IoK8sApiCoreV1AzureFilePersistentVolumeSource.md  IoK8sApiCoreV1AzureFileVolumeSource.md  IoK8sApiCoreV1Binding.md  IoK8sApiCoreV1CSIPersistentVolumeSource.md  IoK8sApiCoreV1Capabilities.md  IoK8sApiCoreV1CephFSPersistentVolumeSource.md  IoK8sApiCoreV1CephFSVolumeSource.md  IoK8sApiCoreV1CinderPersistentVolumeSource.md  IoK8sApiCoreV1CinderVolumeSource.md  IoK8sApiCoreV1ClientIPConfig.md  IoK8sApiCoreV1ComponentCondition.md  IoK8sApiCoreV1ComponentStatus.md  IoK8sApiCoreV1ComponentStatusList.md  IoK8sApiCoreV1ConfigMap.md  IoK8sApiCoreV1ConfigMapEnvSource.md  IoK8sApiCoreV1ConfigMapKeySelector.md  IoK8sApiCoreV1ConfigMapList.md  IoK8sApiCoreV1ConfigMapNodeConfigSource.md  IoK8sApiCoreV1ConfigMapProjection.md  IoK8sApiCoreV1ConfigMapVolumeSource.md  IoK8sApiCoreV1Container.md  IoK8sApiCoreV1ContainerImage.md  IoK8sApiCoreV1ContainerPort.md  IoK8sApiCoreV1ContainerState.md  IoK8sApiCoreV1ContainerStateRunning.md  IoK8sApiCoreV1ContainerStateTerminated.md  IoK8sApiCoreV1ContainerStateWaiting.md  IoK8sApiCoreV1ContainerStatus.md  IoK8sApiCoreV1DaemonEndpoint.md  IoK8sApiCoreV1DownwardAPIProjection.md  IoK8sApiCoreV1DownwardAPIVolumeFile.md  IoK8sApiCoreV1DownwardAPIVolumeSource.md  IoK8sApiCoreV1EmptyDirVolumeSource.md  IoK8sApiCoreV1EndpointAddress.md  IoK8sApiCoreV1EndpointPort.md  (+228 more)
sdk/python/: .gitignore  .openapi-generator-ignore  .travis.yml  Dockerfile.conformance  OWNERS  README.md  requirements.txt  setup.py
sdk/test/: test_io_k8s_api_core_v1_affinity.py  test_io_k8s_api_core_v1_attached_volume.py  test_io_k8s_api_core_v1_avoid_pods.py  test_io_k8s_api_core_v1_aws_elastic_block_store_volume_source.py  test_io_k8s_api_core_v1_azure_disk_volume_source.py  test_io_k8s_api_core_v1_azure_file_persistent_volume_source.py  test_io_k8s_api_core_v1_azure_file_volume_source.py  test_io_k8s_api_core_v1_binding.py  test_io_k8s_api_core_v1_capabilities.py  test_io_k8s_api_core_v1_ceph_fs_persistent_volume_source.py  test_io_k8s_api_core_v1_ceph_fs_volume_source.py  test_io_k8s_api_core_v1_cinder_persistent_volume_source.py  test_io_k8s_api_core_v1_cinder_volume_source.py  test_io_k8s_api_core_v1_client_ip_config.py  test_io_k8s_api_core_v1_component_condition.py  test_io_k8s_api_core_v1_component_status.py  test_io_k8s_api_core_v1_component_status_list.py  test_io_k8s_api_core_v1_config_map.py  test_io_k8s_api_core_v1_config_map_env_source.py  test_io_k8s_api_core_v1_config_map_key_selector.py  test_io_k8s_api_core_v1_config_map_list.py  test_io_k8s_api_core_v1_config_map_node_config_source.py  test_io_k8s_api_core_v1_config_map_projection.py  (+217 more)
sdk_v2/: project.toml  pyproject.toml
(+2981 files in other folders)
