[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kubeflow"
dynamic = ["version"]
authors = [
    { name = "The Kubeflow Authors", email = "kubeflow-discuss@googlegroups.com" },
]
license = { file = "../LICENSE" }
description = "Kubeflow Python SDK to manage ML workloads and to interact with Kubeflow APIs."
readme = "../README.md"
keywords = ["kubeflow", "trainer", "model training", "llm", "ai"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    # TODO (andreyvelich): Check Python version for Kubeflow Trainer.
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "kubernetes>=27.2.0",
    "jobset @ git+https://github.com/kubernetes-sigs/jobset.git@v0.7.3#subdirectory=sdk/python",
]

[project.urls]
Homepage = "https://github.com/kubeflow/trainer"
Documentation = "https://www.kubeflow.org/docs/components/trainer/"
Source = "https://github.com/kubeflow/trainer"

[tool.hatch.build.targets.wheel]
packages = ["kubeflow"]

[tool.hatch.version]
path = "kubeflow/trainer/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true
