[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# TODO (andreyvelich): Potentially, we can move our SDK to Kubeflow: https://pypi.org/project/kubeflow/
name = "kubeflow-training"
dynamic = ["version"]
authors = [
    { name = "The Kubeflow Authors", email = "kubeflow-discuss@googlegroups.com" },
]
license = { file = "../LICENSE" }
description = "Kubeflow Training Python SDK to manage ML training and LLM fine-tuning jobs."
readme = "../README.md"
keywords = ["kubeflow", "training", "model training", "llm", "ai"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    # TODO (andreyvelich): Check Python version for V2.
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["kubernetes>=27.2.0"]

[project.urls]
Homepage = "https://github.com/kubeflow/training-operator"
Documentation = "https://www.kubeflow.org/docs/components/training/"
Source = "https://github.com/kubeflow/training-operator"

[tool.hatch.build.targets.wheel]
packages = ["kubeflow"]


[tool.hatch.version]
path = "kubeflow/training/__init__.py"
